# CString

./: CMakeLists.txt  README.md  Tests.hpp  c_string.cpp  c_string.hpp  main.cpp  utils.hpp
examples/c_string/: c_string.cpp  c_string.hpp  test.cpp
